--- a/public_html/lib/css/style.css
+++ b/public_html/lib/css/style.css
@@ -1,5 +1,19 @@
 /** BOOTSTRAP OVERRIDES **/
 
+.btn-primary {
+	color: #fff;
+	background-color: #508cff;
+	border-color: #508cff;
+}
+
+.btn-primary:hover,
+.btn-primary:active,
+.btn-primary:focus {
+	color: #fff;
+	background-color: #487ee5;
+	border-color: #487ee5;
+}
+
 .navbar-default {
 	padding-top: 50px;
 	background: none;
@@ -79,29 +93,16 @@ header {
 	min-height: 100vh;
 }
 
-.landing h1,
-.landing h2,
-.landing h3,
-.landing h4,
-.landing h5,
-.landing h6,
-.portfolio h1,
-.portfolio h2,
-.portfolio h3,
-.portfolio h4,
-.portfolio h5,
-.portfolio h6,
-.contact h1,
-.contact h2,
-.contact h3,
-.contact h4,
-.contact h5,
-.contact h6 {
+.main-h {
 	padding-top: 100px;
 }
 
 .landing {
-	background: #508cff;
+	background: linear-gradient(rgba(0, 0, 0, 0.42), rgba(80, 140, 255, 0.6)), url(../images/laptop-desk.jpg) no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
 }
 
 .landing h1,
@@ -138,6 +139,43 @@ div {
 	text-decoration: underline;
 }
 
+.ribbon {
+	margin-top: 75px;
+	padding-top: 60px;
+	padding-bottom: 60px;
+	font-size: 5rem;
+
+	transition: all 0.3s;
+}
+
+.ribbon:hover {
+	box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.14);
+}
+
+.ribbon-right {
+	width: 75%;
+	margin-left: 25%;
+	border-top-left-radius: 4px;
+	border-bottom-left-radius: 4px;
+}
+
+.ribbon-right:hover {
+	width: 85%;
+	margin-left: 15%;
+}
+
+.ribbon-left {
+	width: 75%;
+	margin-right: 25%;
+	border-top-right-radius: 4px;
+	border-bottom-right-radius: 4px;
+}
+
+.ribbon-left:hover {
+	width: 85%;
+	margin-right: 15%;
+}
+
 .email {
 	color: #fff;
 	background-color: #508cff;
@@ -154,18 +192,18 @@ div {
 }
 
 .twitter {
-	color: #508cff;
-	background: none;
+	color: #fff;
+	background: #508cff;
 }
 
 .twitter a {
-	color: #508cff;
+	color: #fff;
 }
 
 .twitter a:hover,
 .twitter a:active,
 .twitter a:focus {
-	color: #508cff;
+	color: #fff;
 }
 
 .github {
@@ -185,4 +223,78 @@ div {
 
 .spacer {
 	padding-top: 100px;
+}
+
+/** UTILITY **/
+
+.titillium {
+	font-family: 'Titillium Web', sans-serif;
+}
+
+.blue-text {
+	color: #508cff;
+}
+
+.white-text {
+	color: #fff;
+}
+
+/** ANIMATION **/
+
+.moving-gradient {
+	background: linear-gradient(270deg, #AD4FFF, #508cff);
+	background-size: 400% 400%;
+
+	-webkit-animation: bg-gradient 20s ease infinite;
+	-moz-animation: bg-gradient 20s ease infinite;
+	-o-animation: bg-gradient 20s ease infinite;
+	animation: bg-gradient 20s ease infinite;
+}
+
+@-webkit-keyframes bg-gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
+
+@-moz-keyframes bg-gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
+
+@-o-keyframes bg-gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
+
+@keyframes bg-gradient {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
 }
