Updated landing page

--- a/public_html/lib/css/style.css
+++ b/public_html/lib/css/style.css
@@ -8,6 +8,14 @@
 	border-top-right-radius: 4px;
 }
 
+.jumbotron {
+	background: none;
+}
+
+.jumbotron * {
+	color: #fff;
+}
+
 .btn-primary {
 	color: #fff;
 	background-color: #508cff;
