--- a/public_html/lib/css/style.css
+++ b/public_html/lib/css/style.css
@@ -111,6 +111,7 @@ header {
 .portfolio,
 .contact {
 	min-height: 100vh;
+	background-color: white;
 }
 
 .main-h {
@@ -118,11 +119,27 @@ header {
 }
 
 .landing {
-	background: linear-gradient(rgba(0, 0, 0, 0.42), rgba(80, 140, 255, 0.6)), url(../images/laptop-desk.jpg) no-repeat center center fixed;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
+	/*background: linear-gradient(rgba(0, 0, 0, 0.42), rgba(80, 140, 255, 0.6)), url(../images/laptop-desk.jpg) no-repeat center center fixed;*/
+	/*-webkit-background-size: cover;*/
+	/*-moz-background-size: cover;*/
+	/*-o-background-size: cover;*/
+	/*background-size: cover;*/
+	background: none;
+	overflow: hidden;
+	position: relative;
+}
+
+.landing::before {
+	content: ' ';
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background: linear-gradient(rgba(0, 0, 0, 0.42), rgba(80, 140, 255, 0.6)), url(../images/laptop-desk.jpg) no-repeat center center;
 	background-size: cover;
+	will-change: transform;
+	z-index: -1;
 }
 
 .landing h1,
